--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,11 @@
       <artifactId>postgresql</artifactId>
       <version>42.6.0</version>
     </dependency>
+    <dependency>
+      <groupId>org.hibernate</groupId>
+      <artifactId>hibernate-core</artifactId>
+      <version>5.6.14.Final</version>
+    </dependency>
     <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok-maven-plugin -->
     <dependency>
       <groupId>org.projectlombok</groupId>
@@ -21,12 +26,66 @@
       <version>1.18.20.0</version>
       <scope>provided</scope>
     </dependency>
-
+    <dependency>
+      <groupId>jakarta.xml.bind</groupId>
+      <artifactId>jakarta.xml.bind-api</artifactId>
+      <version>2.3.2</version>
+    </dependency>
+    <dependency>
+      <groupId>org.glassfish.jaxb</groupId>
+      <artifactId>jaxb-runtime</artifactId>
+      <version>2.3.2</version>
+    </dependency>
+    <dependency>
+      <groupId>org.javassist</groupId>
+      <artifactId>javassist</artifactId>
+      <version>3.23.1-GA</version>
+    </dependency>
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>3.8.1</version>
       <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.java-sql-generator</groupId>
+      <artifactId>java-sql-generator</artifactId>
+      <version>0.2</version>
+    </dependency>
+    <dependency>
+      <groupId>org.java-sql-generator</groupId>
+      <artifactId>org.java-sql-generator</artifactId>
+      <version>0.3.2</version>
+    </dependency>
+    <dependency>
+      <groupId>com.octo.java-sql-dsl</groupId>
+      <artifactId>java-sql-dsl</artifactId>
+      <version>0.1.1</version>
+    </dependency>
+    <dependency>
+      <groupId>org.java-sql-generator</groupId>
+      <artifactId>org.java-sql-generator.implementation</artifactId>
+      <version>0.3.2</version>
+    </dependency>
+    <dependency>
+      <groupId>org.java-sql-generator</groupId>
+      <artifactId>org.java-sql-generator.api</artifactId>
+      <version>0.3.2</version>
+    </dependency>
+    <dependency>
+      <groupId>com.github.nbbrd.java-sql-util</groupId>
+      <artifactId>java-sql-odbc</artifactId>
+      <version>1.0.3</version>
+    </dependency>
+    <dependency>
+      <groupId>com.github.nbbrd.java-sql-util</groupId>
+      <artifactId>java-sql-bom</artifactId>
+      <version>1.0.3</version>
+    </dependency>
+    <dependency>
+      <groupId>com.github.nbbrd.java-sql-util</groupId>
+      <artifactId>java-sql-lhod</artifactId>
+      <version>1.0.3</version>
     </dependency>
   </dependencies>
   <build>
@@ -36,8 +95,8 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
         <configuration>
-          <source>7</source>
-          <target>7</target>
+          <source>16</source>
+          <target>16</target>
         </configuration>
       </plugin>
     </plugins>
